crates/phoenix-ir/src/snapshots/phoenix_ir__tests__lower_return_bool_literal.snap
---
source: crates/phoenix-ir/src/tests.rs
expression: ir
---
func @main() -> bool {
  bb0:
    v0 = const_bool true
    return v0
}
