crates/phoenix-ir/src/snapshots/phoenix_ir__tests__lower_return_float_literal.snap
---
source: crates/phoenix-ir/src/tests.rs
expression: ir
---
func @main() -> f64 {
  bb0:
    v0 = const_f64 3.14
    return v0
}
