crates/phoenix-ir/src/snapshots/phoenix_ir__tests__lower_return_int_literal.snap
---
source: crates/phoenix-ir/src/tests.rs
expression: ir
---
func @main() -> i64 {
  bb0:
    v0 = const_i64 42
    return v0
}
