crates/phoenix-ir/src/snapshots/phoenix_ir__tests__lower_return_string_literal.snap
---
source: crates/phoenix-ir/src/tests.rs
expression: ir
---
func @main() -> string {
  bb0:
    v0 = const_string "hello"
    return v0
}
