crates/phoenix-ir/src/snapshots/phoenix_ir__tests__lower_string_interpolation.snap
---
source: crates/phoenix-ir/src/tests.rs
expression: ir
---
func @main() -> void {
  bb0:
    v0 = const_string "world"
    v1 = const_string "hello "
    v2 = string_concat v1, v0
    v3 = const_string "!"
    v4 = string_concat v2, v3
    builtin_call @print(v4)
    return
}
