crates/phoenix-ir/src/snapshots/phoenix_ir__tests__lower_struct_construction.snap
---
source: crates/phoenix-ir/src/tests.rs
expression: ir
---
func @main() -> i64 {
  bb0:
    v0 = const_i64 10
    v1 = const_i64 20
    v2 = struct_alloc @Point(v0, v1)
    v3 = struct_get_field v2, 0
    return v3
}
