crates/phoenix-ir/src/snapshots/phoenix_ir__tests__lower_struct_destructuring.snap
---
source: crates/phoenix-ir/src/tests.rs
expression: ir
---
func @main() -> i64 {
  bb0:
    v0 = const_i64 3
    v1 = const_i64 4
    v2 = struct_alloc @Point(v0, v1)
    v3 = struct_get_field v2, 0
    v4 = struct_get_field v2, 1
    v5 = iadd v3, v4
    return v5
}
